; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/power/extr_ds2760_battery.c_ds2760_battery_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/power/extr_ds2760_battery.c_ds2760_battery_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.ds2760_device_info = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @ds2760_battery_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ds2760_battery_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.ds2760_device_info*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.ds2760_device_info* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.ds2760_device_info* %5, %struct.ds2760_device_info** %3, align 8
  %6 = load %struct.ds2760_device_info*, %struct.ds2760_device_info** %3, align 8
  %7 = getelementptr inbounds %struct.ds2760_device_info, %struct.ds2760_device_info* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.ds2760_device_info*, %struct.ds2760_device_info** %3, align 8
  %10 = getelementptr inbounds %struct.ds2760_device_info, %struct.ds2760_device_info* %9, i32 0, i32 3
  %11 = call i32 @cancel_rearming_delayed_workqueue(i32 %8, i32* %10)
  %12 = load %struct.ds2760_device_info*, %struct.ds2760_device_info** %3, align 8
  %13 = getelementptr inbounds %struct.ds2760_device_info, %struct.ds2760_device_info* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.ds2760_device_info*, %struct.ds2760_device_info** %3, align 8
  %16 = getelementptr inbounds %struct.ds2760_device_info, %struct.ds2760_device_info* %15, i32 0, i32 2
  %17 = call i32 @cancel_rearming_delayed_workqueue(i32 %14, i32* %16)
  %18 = load %struct.ds2760_device_info*, %struct.ds2760_device_info** %3, align 8
  %19 = getelementptr inbounds %struct.ds2760_device_info, %struct.ds2760_device_info* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @destroy_workqueue(i32 %20)
  %22 = load %struct.ds2760_device_info*, %struct.ds2760_device_info** %3, align 8
  %23 = getelementptr inbounds %struct.ds2760_device_info, %struct.ds2760_device_info* %22, i32 0, i32 0
  %24 = call i32 @power_supply_unregister(i32* %23)
  ret i32 0
}

declare dso_local %struct.ds2760_device_info* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @cancel_rearming_delayed_workqueue(i32, i32*) #1

declare dso_local i32 @destroy_workqueue(i32) #1

declare dso_local i32 @power_supply_unregister(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
